--- a/.github/workflows/expressions-in-workflow.yaml
+++ b/.github/workflows/expressions-in-workflow.yaml
@@ -18,5 +18,5 @@ jobs:
       matrix: ${{ fromJSON(needs.job1.outputs.matrix) }}
     steps:
       - run: echo "✅"
-      - run: echo ${{matrix.include.config}}
+      - run: echo 'Ok'
         if: ${{ success() }}
